--- a/TravelTaipei/Sources/App/Views/TouristSiteTableViewCell.xib
+++ b/TravelTaipei/Sources/App/Views/TouristSiteTableViewCell.xib
@@ -12,45 +12,72 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="216" id="KGk-i7-Jjw" customClass="TouristSiteTableViewCell" customModule="TravelTaipei" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="253" id="KGk-i7-Jjw" customClass="TouristSiteTableViewCell" customModule="TravelTaipei" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="253"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="215.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="252.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaL-iW-7q8">
-                        <rect key="frame" x="15" y="15" width="290" height="21"/>
+                        <rect key="frame" x="15" y="25" width="290" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="6pL-AU-Ha2"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XA7-GO-Rla">
-                        <rect key="frame" x="15" y="51" width="290" height="149.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="15" y="54" width="290" height="18.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZKc-Wl-Bh9">
+                        <rect key="frame" x="15" y="87.5" width="290" height="150"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="wfq-Iv-69g"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Yzw-ts-qaA">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ui9-e8-wQ9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="10"/>
+                        <color key="backgroundColor" red="0.92146831750869751" green="0.92162626981735229" blue="0.92145836353302002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="10" id="BS6-sv-hHr"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="XA7-GO-Rla" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="1rm-Mh-mat"/>
+                    <constraint firstItem="WaL-iW-7q8" firstAttribute="top" secondItem="Ui9-e8-wQ9" secondAttribute="bottom" constant="15" id="BxS-nw-Y2Y"/>
                     <constraint firstItem="WaL-iW-7q8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="JbC-Up-lra"/>
+                    <constraint firstAttribute="bottom" secondItem="ZKc-Wl-Bh9" secondAttribute="bottom" constant="15" id="NLT-zu-zSx"/>
                     <constraint firstAttribute="trailing" secondItem="XA7-GO-Rla" secondAttribute="trailing" constant="15" id="XFB-A0-OBz"/>
-                    <constraint firstItem="XA7-GO-Rla" firstAttribute="top" secondItem="WaL-iW-7q8" secondAttribute="bottom" constant="15" id="Xd0-JC-C8o"/>
+                    <constraint firstItem="XA7-GO-Rla" firstAttribute="top" secondItem="WaL-iW-7q8" secondAttribute="bottom" constant="8" id="Xd0-JC-C8o"/>
                     <constraint firstAttribute="trailing" secondItem="WaL-iW-7q8" secondAttribute="trailing" constant="15" id="XdZ-ul-4ia"/>
-                    <constraint firstItem="WaL-iW-7q8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="cpx-wi-SZs"/>
-                    <constraint firstAttribute="bottom" secondItem="XA7-GO-Rla" secondAttribute="bottom" constant="15" id="qeX-4h-CSw"/>
+                    <constraint firstItem="ZKc-Wl-Bh9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="XnC-Cf-dqg"/>
+                    <constraint firstItem="Ui9-e8-wQ9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="lmU-ym-E1x"/>
+                    <constraint firstAttribute="trailing" secondItem="Ui9-e8-wQ9" secondAttribute="trailing" id="odY-nu-Ypg"/>
+                    <constraint firstAttribute="trailing" secondItem="ZKc-Wl-Bh9" secondAttribute="trailing" constant="15" id="t6m-mo-Bt5"/>
+                    <constraint firstItem="ZKc-Wl-Bh9" firstAttribute="top" secondItem="XA7-GO-Rla" secondAttribute="bottom" constant="15" id="yxh-b7-lr0"/>
+                    <constraint firstItem="Ui9-e8-wQ9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zaq-gk-gyw"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="collectionView" destination="ZKc-Wl-Bh9" id="CNn-9v-udH"/>
                 <outlet property="discription" destination="XA7-GO-Rla" id="Tmv-OF-69B"/>
                 <outlet property="title" destination="WaL-iW-7q8" id="afW-Py-SUN"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="160.04464285714286"/>
+            <point key="canvasLocation" x="137.68115942028987" y="172.43303571428569"/>
         </tableViewCell>
     </objects>
 </document>
